# rules_clang_tidy

./: .bazelignore  .bazelrc  .clang-tidy  BUILD.bazel  LICENSE  README.md  WORKSPACE.bazel  apply-fixes.bash  apply-fixes.sh  apply_fixes.bzl  aspects.bzl  defs.bzl  dependencies.bzl  make_clang_tidy_aspect.bzl
.github/actions/setup-env/: action.yml
.github/workflows/: check.yml  pull-request-update.yml
example/: .bazelrc  BUILD.bazel  WORKSPACE.bazel
example/dep-cc_test/: .bazelrc  BUILD.bazel  foo.cpp
example/dep-cc_test/fail/: BUILD.bazel
example/dep-cc_test/pass/: BUILD.bazel
example/hermetic-toolchain/: .bazelignore  .bazelrc  BUILD.bazel  WORKSPACE.bazel
example/misc-unused/: .bazelignore  .bazelrc  WORKSPACE.bazel  misc-unused-alias-decls.cpp  misc-unused-alias-decls.cpp.fixed
example/misc-unused-alias-decls/: WORKSPACE.bazel
example/shared-source/: .bazelignore  BUILD.bazel  main.cpp
private/: BUILD.bazel  extra_options_flag.bzl  functional.bzl  local_bazel_version.bzl  local_example_status.bzl  local_workspace_directories.bzl  local_workspace_status.bzl  path_binary_wrapper.bzl
test/: BUILD.bazel  check_cc_test-deps_test.bash  check_extra-options_test.bash  check_hermetic-toolchain_test.bash  check_misc-unused_test.bash  fix_desired-deps_test.bash  fix_hermetic-toolchain_test.bash  fix_rule_test.bash  fix_script_test.bash  fix_shared-source_test.bash  fix_uses-check-action-cache_test.bash  prelude.template.bash  tidy_test.bzl
tools/: BUILD.bazel
