load("@rules_clang_tidy//:defs.bzl", "apply_fixes")

cc_binary(
    name = "foo",
    srcs = ["foo.cpp"],
    visibility = [
        "//fail:__pkg__",
        "//pass:__pkg__",
    ],
)

cc_test(
    name = "bar",
    srcs = ["bar.cpp"],
    visibility = [
        "//fail:__pkg__",
        "//pass:__pkg__",
    ],
)

apply_fixes(
    name = "build_pass",
    deps = [
        "//:bar",
        "//:foo",
    ],
)
